AC_PREREQ(2.59)

AC_INIT([pandora-applet], [1.2.0], [http://sourceforge.net/tracker/?group_id=155200&atid=794852], [pandora_applet])
AC_CONFIG_SRCDIR([src/main.c])
AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)

AC_SUBST(ACLOCAL_AMFLAGS, "$ACLOCAL_FLAGS")

AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_STDC_HEADERS

GLIB_REQUIRED=2.6.0
GTK_REQUIRED=2.8.0
	
PKG_CHECK_MODULES(PANDORA,
		  glib-2.0       >= $GLIB_REQUIRED
		  gtk+-2.0       >= $GTK_REQUIRED
		  gthread-2.0
                  libxml-2.0)

CHECK_MYSQL_DB

GETTEXT_PACKAGE=pandora-applet
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE",[The gettext package])
ALL_LINGUAS=""
AM_GLIB_GNU_GETTEXT

if test "x${prefix}" = "xNONE"; then
   AC_DEFINE_UNQUOTED(PIXMAPS_DIR, "${ac_default_prefix}/$DATADIRNAME/${PACKAGE}/pixmaps", [Pixmaps directory])
   pixmaps_dir="${ac_default_prefix}/$DATADIRNAME/${PACKAGE}/pixmaps"
else
   AC_DEFINE_UNQUOTED(PIXMAPS_DIR, "${prefix}/$DATADIRNAME/${PACKAGE}/pixmaps", [Pixmaps directory])
   pixmaps_dir="${prefix}/$DATADIRNAME/${PACKAGE}/pixmaps"
fi

AC_SUBST(pixmaps_dir)

AC_SUBST(PANDORA_CFLAGS)
AC_SUBST(PANDORA_LIBS)

AC_CONFIG_FILES([
Makefile
src/Makefile
data/Makefile])

AC_OUTPUT
