pixmapsdir = $(pixmaps_dir)

pixmaps_DATA =                       \
             pandora-applet-bad.png  \
             pandora-applet-good.png \
             pandora-applet-unknown.png \
	     pandora-alerts-bad.png   \
	     pandora-alerts-ok.png    \
	     pandora-alerts-unknown.png    \
	     pandora-servers-bad.png \
	     pandora-servers-ok.png   \
	     pandora-servers-unknown.png   \
	     pandora-agents-bad.png   \
	     pandora-agents-ok.png    \
	     pandora-agents-unknown.png    \
             pandora.png

EXTRA_DIST =                            \
                $(pixmaps_DATA) 

